<resources>
    <string name="app_name">AZFT2I Francia Sakk</string>
    <string name="hello_user_msg">A folytatáshoz érintse meg a képernyőt!</string>
    <string name="white_player_name_spec">Add meg a fehér játékost</string>
    <string name="black_player_name_spec">Add meg a fekete játékost</string>
    <string name="no_text"> </string>
    <string name="invisible_name_request1"> Add meg a fehér játékost </string>
    <string name="invisible_name_request2"> Add meg a fehér játékost </string>
    <string name="white_player_name_request">Fehér játékos</string>
    <string name="black_player_name_request">Fekete játékos</string>
    <string name="white_player_name">Fehér játékos:</string>
    <string name="black_player_name">Fekete játékos:</string>
    <string name="back_button">Vissza</string>
    <string name="exit_button_first_screen">Kilépés</string>
    <string name="start_game_button">Játék kezdése</string>
    <string name="start_game_init_button">Játék indítása</string>
    <string name="game_rules_button">Játékszabályok</string>
    <string name="about_dev_button">A fejlesztőkről</string>
    <string name="azft2ichessimage_description">Játék ikon</string>
    <string name="chess_game_rules_text">Játékszabályok</string>
    <string name="whiteResignFromGame">Feladás</string>
    <string name="blackResignFromGame">Feladás</string>
    <string name="white_player">Fehér:</string>
    <string name="black_player">Fekete:</string>
    <string name="restart_game_button">Újrakezdés</string>
    <string name="offer_draw_white">Döntetlen</string>
    <string name="offer_draw_black">Döntetlen</string>
    <string name="rematch_button">Visszavágó</string>
    <string name="start_new_game_button">Új játék</string>
    <string name="draw_offer_text">Döntetlen ajánlat</string>
    <string name="draw_offered_text">DÖNTETLEN ELFOGADVA</string>
    <string name="white_next_turn">Fehér következik</string>
    <string name="black_next_turn">Fekete következik</string>
    <string name="welcomePage">Üdvözöljük az alkalmazásban!</string>
    <string name="gameStartMessage">Indítás előtt adja meg a két játékos nevét.</string>
    <string name="inGameTimeText_A_Tied">Játékban eltöltött idő</string>
    <string name="inGameMoveText_A_Tied">Játékban megtett lépések</string>
    <string name="pawn_promotion_page">Gyalog átalakulás</string>
    <string name="pawn_figure">Gyalog</string>
    <string name="knight_figure">Huszár</string>
    <string name="queen_figure">Királynő</string>
    <string name="king_figure">Király</string>
    <string name="rook_figure">Bástya</string>
    <string name="bishop_figure">Futó</string>

    <string name="chess_rules_text">Játékszabályok:\n\n
    0. A francia sakkban a (hagyományos) sakk minden szabálya érvényes (kezdőállás, lépés- és ütésmódok), az alábbiakkal kiegészítve/módosítva a szabályokat:\n
    1. Az nyer, akinek először elfogynak a bábui. Vagyis az összes figurája lekerül a tábláról.\n
    2. Ha a lépésen/körön lévő játékos ütni tud, köteles is. Ha többféleképpen üthet, válaszhat ezek közül.\n
    3. A királyt is ugyanúgy le lehet és le kell ütni, mint a többi bábut.\n
    4. A sakkadás fogalma nem létezik. Matt sincs. Így bármit léphetünk akkor is, ha a királyunk ütésben van.\n
    5. A gyalogok királlyá is változhatnak, ha elérik az ellenfél alapvonalát.\n
    6. Az en passant ütés és a sáncolás nincs. (Megegyezés szerint)\n
    7. Patthelyzet esetén döntetlen. (Megegyezés szerint)</string>


</resources>