<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="160dp"
    android:padding="16dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >

    <ImageView
        android:id="@+id/imageKing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/king_figure"
        android:textColor="@color/white"
        android:background="@drawable/piece_king_white"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/king_figure"
                />

    <ImageView
        android:id="@+id/imageQueen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/queen_figure"
        android:textColor="@color/white"
        android:background="@drawable/piece_queen_white"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/queen_figure"
        />


    <ImageView
        android:id="@+id/imageBishop"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@drawable/piece_bishop_white"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/bishop_figure" />

    <ImageView
        android:id="@+id/imageRook"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:background="@drawable/piece_rook_white"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/rook_figure"/>

    <ImageView
        android:id="@+id/imageKnight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/knight_figure"
        android:textColor="@android:color/white"
        android:background="@drawable/piece_knight_white"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/knight_figure"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>