<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_lightblue"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageKnight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/piece_knight_black_r180"
            android:contentDescription="@string/knight_figure"
            android:text="@string/knight_figure"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageRook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/piece_rook_black_r180"
            android:contentDescription="@string/rook_figure"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageBishop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/piece_bishop_black_r180"
            android:contentDescription="@string/bishop_figure"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageQueen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/piece_queen_black_r180"
            android:contentDescription="@string/queen_figure"
            android:text="@string/queen_figure"
            android:textColor="@color/white" />


        <ImageView
            android:id="@+id/imageKing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/piece_king_black_r180"
            android:contentDescription="@string/king_figure"
            android:text="@string/king_figure"
            android:textColor="@color/white" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>